examples/test/testpolicy16196.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16196
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key37: value5
      key47: value14
      key43: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value44
          key25: value41
          key30: value4
      podSelector:
        matchLabels:
          key27: value41
